--- a/build-apple/PanicPainter.xcodeproj/xcshareddata/xcschemes/PanicPainter (iOS).xcscheme
+++ b/build-apple/PanicPainter.xcodeproj/xcshareddata/xcschemes/PanicPainter (iOS).xcscheme
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "EB22BF5D25D0E8BC002ACE41"
-               BuildableName = "HelloWorld (Sim).app"
-               BlueprintName = "HelloWorld (Sim)"
-               ReferencedContainer = "container:HelloWorld.xcodeproj">
+               BlueprintIdentifier = "EB74548B1D74D75C002FBAE6"
+               BuildableName = "PanicPainter (iOS).app"
+               BlueprintName = "PanicPainter (iOS)"
+               ReferencedContainer = "container:PanicPainter.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -27,6 +27,15 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "EB74548B1D74D75C002FBAE6"
+            BuildableName = "PanicPainter (iOS).app"
+            BlueprintName = "PanicPainter (iOS)"
+            ReferencedContainer = "container:PanicPainter.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <Testables>
       </Testables>
    </TestAction>
@@ -44,10 +53,10 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "EB22BF5D25D0E8BC002ACE41"
-            BuildableName = "HelloWorld (Sim).app"
-            BlueprintName = "HelloWorld (Sim)"
-            ReferencedContainer = "container:HelloWorld.xcodeproj">
+            BlueprintIdentifier = "EB74548B1D74D75C002FBAE6"
+            BuildableName = "PanicPainter (iOS).app"
+            BlueprintName = "PanicPainter (iOS)"
+            ReferencedContainer = "container:PanicPainter.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -61,10 +70,10 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "EB22BF5D25D0E8BC002ACE41"
-            BuildableName = "HelloWorld (Sim).app"
-            BlueprintName = "HelloWorld (Sim)"
-            ReferencedContainer = "container:HelloWorld.xcodeproj">
+            BlueprintIdentifier = "EB74548B1D74D75C002FBAE6"
+            BuildableName = "PanicPainter (iOS).app"
+            BlueprintName = "PanicPainter (iOS)"
+            ReferencedContainer = "container:PanicPainter.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
