--- a/build-android/app/build.gradle
+++ b/build-android/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "edu.cornell.gdiac.helloworld"
+        applicationId "dragonglass.panicpainter"
         minSdkVersion 23
         targetSdkVersion 30
         versionCode 1
