JSON, model, canvas, timer for gameplay

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
 .vs
 ._*
+.DS_Store
 
+xcuserdata
+local.properties
+
+# The below is for developing in CLion.
+# Because CLion and CMake is not the *offical* way to build this project.
+# We are ignoring it.
+CMakeLists.txt
+cmake-build-debug
+.idea
+CMake
