--- a/build-win10/PanicPainter/PanicPainter.vcxproj
+++ b/build-win10/PanicPainter/PanicPainter.vcxproj
@@ -188,6 +188,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\..\source\controllers\PPGlobalConfig.cpp" />
+    <ClCompile Include="..\..\source\controllers\PPInput.cpp" />
     <ClCompile Include="..\..\source\main.cpp" />
     <ClCompile Include="..\..\source\models\PPGameState.cpp" />
     <ClCompile Include="..\..\source\PPApp.cpp" />
@@ -212,6 +213,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\source\controllers\PPGlobalConfig.h" />
+    <ClInclude Include="..\..\source\controllers\PPInput.h" />
     <ClInclude Include="..\..\source\models\PPGameState.h" />
     <ClInclude Include="..\..\source\PPApp.h" />
     <ClInclude Include="..\..\source\scenes\gameplay\PPCanvas.h" />
