--- a/build-win10/PanicPainter/PanicPainter.vcxproj
+++ b/build-win10/PanicPainter/PanicPainter.vcxproj
@@ -193,6 +193,7 @@
     <ClCompile Include="..\..\source\controllers\PPGameState.cpp" />
     <ClCompile Include="..\..\source\PPApp.cpp" />
     <ClCompile Include="..\..\source\scenes\gameplay\PPCanvas.cpp" />
+    <ClCompile Include="..\..\source\scenes\gameplay\PPColorPalette.cpp" />
     <ClCompile Include="..\..\source\scenes\gameplay\PPCanvasBlock.cpp" />
     <ClCompile Include="..\..\source\scenes\gameplay\PPColorStrip.cpp" />
     <ClCompile Include="..\..\source\scenes\gameplay\PPGameScene.cpp" />
@@ -220,6 +221,7 @@
     <ClInclude Include="..\..\source\scenes\gameplay\PPCanvas.h" />
     <ClInclude Include="..\..\source\scenes\gameplay\PPCanvasBlock.h" />
     <ClInclude Include="..\..\source\scenes\gameplay\PPColorStrip.h" />
+    <ClInclude Include="..\..\source\scenes\gameplay\PPColorPalette.h" />
     <ClInclude Include="..\..\source\scenes\gameplay\PPGameScene.h" />
     <ClInclude Include="..\..\source\scenes\loading\PPLoadingScene.h" />
     <ClInclude Include="..\..\source\utils\PPAssets.h" />
